# grove-public

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
src/grove/: CMakeLists.txt  audio.hpp  env.cpp  env.hpp  gl.hpp  glsl.hpp  grove.hpp  imgui.hpp  input.hpp  load.hpp  math.hpp  visual.hpp
src/grove/audio/: ArpeggiatorSystem.cpp  ArpeggiatorSystem.hpp  AudioBufferStore.cpp  AudioBufferStore.hpp  AudioCore.cpp  AudioCore.hpp  AudioEffect.cpp  AudioEffect.hpp  AudioEventSystem.cpp  AudioEventSystem.hpp  AudioGraph.cpp  AudioGraph.hpp  AudioGraphProxy.cpp  AudioGraphProxy.hpp  AudioGraphRenderData.cpp  AudioGraphRenderData.hpp  AudioGraphRenderer.cpp  AudioGraphRenderer.hpp  AudioMemoryArena.cpp  AudioMemoryArena.hpp  AudioNodeIsolator.cpp  AudioNodeIsolator.hpp  AudioParameterSystem.cpp  AudioParameterSystem.hpp  AudioParameterWriteAccess.cpp  AudioParameterWriteAccess.hpp  AudioRecorder.cpp  AudioRecorder.hpp  AudioRenderBufferSystem.cpp  AudioRenderBufferSystem.hpp  AudioRenderable.hpp  AudioRenderer.cpp  AudioRenderer.hpp  AudioScale.cpp  AudioScale.hpp  AudioScaleSystem.cpp  AudioScaleSystem.hpp  AudioStream.cpp  AudioStream.hpp  AudioThread.cpp  (+66 more)
src/grove/common/: ArrayView.hpp  BuddyAllocator.hpp  CMakeLists.txt  ContiguousElementGroupAllocator.cpp  ContiguousElementGroupAllocator.hpp  DistinctRanges.hpp  DynamicArray.hpp  Either.hpp  Future.hpp  Handshake.hpp  History.hpp  Optional.hpp  QueuedRingBuffer.hpp  RingBuffer.hpp  SimulationTimer.hpp  SlotLists.hpp  StatStopwatch.cpp  StatStopwatch.hpp  Stopwatch.hpp  Temporary.hpp  Unique.hpp  algorithm.hpp  common.hpp  config.hpp  fs.cpp  fs.hpp  identifier.hpp  intrin.cpp  intrin.hpp  logging.cpp  logging.hpp  memory.cpp  memory.hpp  pack.cpp  pack.hpp  platform.hpp  profile.cpp  profile.hpp  scope.hpp  stats.hpp  (+2 more)
src/grove/gl/: CMakeLists.txt  DrawComponent.cpp  DrawComponent.hpp  GLBuffer.cpp  GLBuffer.hpp  GLBufferTexture.cpp  GLBufferTexture.hpp  GLFramebuffer.cpp  GLFramebuffer.hpp  GLKeyboard.cpp  GLKeyboard.hpp  GLMouse.cpp  GLMouse.hpp  GLProfiler.cpp  GLProfiler.hpp  GLRenderContext.cpp  GLRenderContext.hpp  GLRenderbuffer.cpp  GLRenderbuffer.hpp  GLResource.hpp  GLTexture.cpp  GLTexture.hpp  GLTexture2.cpp  GLTexture2.hpp  GLTexture2Array.cpp  GLTexture2Array.hpp  GLTexture3.cpp  GLTexture3.hpp  GLTextureCube.cpp  GLTextureCube.hpp  GLWindow.cpp  GLWindow.hpp  Program.cpp  Program.hpp  ProgramComponent.cpp  ProgramComponent.hpp  Shader.cpp  Shader.hpp  TextureStack.cpp  TextureStack.hpp  (+12 more)
src/grove/glsl/: CMakeLists.txt  preprocess.cpp  preprocess.hpp
src/grove/gui/: CMakeLists.txt  font.cpp  font.hpp  gui_cursor.cpp  gui_cursor.hpp  gui_elements.cpp  gui_elements.hpp  gui_layout.cpp  gui_layout.hpp  gui_layout_private.hpp
src/grove/imgui/: CMakeLists.txt  IMGUIWrapper.cpp  IMGUIWrapper.hpp
src/grove/input/: CMakeLists.txt  Controller.cpp  Controller.hpp  Directional.cpp  Directional.hpp  KeyTrigger.cpp  KeyTrigger.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.hpp  MouseButtonTrigger.cpp  MouseButtonTrigger.hpp
src/grove/load/: CMakeLists.txt  array.cpp  array.hpp  image.cpp  image.hpp  obj.cpp  obj.hpp  wav.cpp  wav.hpp
src/grove/ls/: CMakeLists.txt  StringRegistry.hpp  common.cpp  common.hpp  compile.cpp  compile.hpp  derive.cpp  derive.hpp  derive_branched.cpp  derive_branched.hpp  dump.cpp  dump.hpp  interpret.cpp  interpret.hpp  ls.hpp  match.cpp  match.hpp  parse.cpp  parse.hpp  resolve.cpp  resolve.hpp  scan.cpp  scan.hpp
src/grove/math/: Bounds2.hpp  Bounds3.hpp  CMakeLists.txt  Frustum.hpp  GridIterator3.hpp  Mat2.hpp  Mat3.hpp  Mat3x4.hpp  Mat4.hpp  OBB3.hpp  Octree.hpp  Ray.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  bezier.cpp  bezier.hpp  bounds.hpp  cdt.cpp  cdt.hpp  constants.cpp  constants.hpp  ease.hpp  frame.hpp  intersect.cpp  intersect.hpp  matrix.hpp  matrix_transform.hpp  random.cpp  random.hpp  string_cast.hpp  triangle.cpp  triangle.hpp  triangle_search.cpp  triangle_search.hpp  triangulation.cpp  triangulation.hpp  util.cpp  util.hpp  window.hpp
src/grove/serialize/: CMakeLists.txt  StringRegistry.hpp  ast.cpp  ast.hpp  collect.cpp  collect.hpp  common.hpp  declare.cpp  declare.hpp  error.cpp  error.hpp  parse.cpp  parse.hpp  parse_ast.cpp  parse_ast.hpp  pipeline.cpp  pipeline.hpp  resolve.cpp  resolve.hpp  scan.cpp  scan.hpp  text.cpp  text.hpp  token.cpp  token.hpp  transform.cpp  transform.hpp  utility.cpp  utility.hpp  visitor.hpp
src/grove/visual/: CMakeLists.txt  Camera.cpp  Camera.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  HeightMap.hpp  Image.hpp  OrbitCamera.cpp  OrbitCamera.hpp  Texture.hpp  VertexBufferDataStore.cpp  VertexBufferDataStore.hpp  Window.cpp  Window.hpp  brush.hpp  distribute_along_axis.cpp  distribute_along_axis.hpp  geometry.cpp  geometry.hpp  image_process.cpp  image_process.hpp  types.cpp  types.hpp
src/grove/vk/: CMakeLists.txt  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  common.hpp  core.cpp  core.hpp  debug.cpp  debug.hpp  descriptor_set.cpp  descriptor_set.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  memory.cpp  memory.hpp  physical_device.cpp  physical_device.hpp  query_pool.cpp  query_pool.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  (+1 more)
src/vk-app/: CMakeLists.txt  main.cpp
src/vk-app/architecture/: ArchComponent.cpp  ArchComponent.hpp  DebugArchComponent.cpp  DebugArchComponent.hpp  collision_with_internodes.cpp  collision_with_internodes.hpp  collision_with_roots.cpp  collision_with_roots.hpp  common.cpp  common.hpp  debug.cpp  debug.hpp  geometry.cpp  geometry.hpp  grid.cpp  grid.hpp  instrument.cpp  instrument.hpp  project_internodes_on_structure.cpp  project_internodes_on_structure.hpp  ray_project.cpp  ray_project.hpp  ray_project_adjacency.cpp  ray_project_adjacency.hpp  render.cpp  render.hpp  segmented_structure_system.cpp  segmented_structure_system.hpp  structure_geometry.cpp  (+5 more)
(+953 files in other folders)
