project(vk_app)

set(SOURCES
        main.cpp

        architecture/DebugArchComponent.hpp
        architecture/DebugArchComponent.cpp
        architecture/common.hpp
        architecture/common.cpp
        architecture/debug.hpp
        architecture/debug.cpp
        architecture/geometry.hpp
        architecture/geometry.cpp
        architecture/grid.hpp
        architecture/grid.cpp
        architecture/structure_growth.hpp
        architecture/structure_growth.cpp
        architecture/ray_project.hpp
        architecture/ray_project.cpp
        architecture/ray_project_adjacency.hpp
        architecture/ray_project_adjacency.cpp
        architecture/render.hpp
        architecture/render.cpp
        architecture/instrument.hpp
        architecture/instrument.cpp
        architecture/structure_geometry.hpp
        architecture/structure_geometry.cpp
        architecture/ArchComponent.hpp
        architecture/ArchComponent.cpp
        architecture/segmented_structure_system.hpp
        architecture/segmented_structure_system.cpp
        architecture/collision_with_internodes.hpp
        architecture/collision_with_internodes.cpp
        architecture/collision_with_roots.hpp
        architecture/collision_with_roots.cpp
        architecture/wall_holes_around_tree_nodes.hpp
        architecture/wall_holes_around_tree_nodes.cpp
        architecture/project_internodes_on_structure.hpp
        architecture/project_internodes_on_structure.cpp

        audio_core/SimpleAudioNodePlacement.hpp
        audio_core/SimpleAudioNodePlacement.cpp
        audio_core/debug_audio_parameter_events.hpp
        audio_core/debug_audio_parameter_events.cpp
        audio_core/debug_audio_nodes.hpp
        audio_core/debug_audio_nodes.cpp
        audio_core/debug_note_clip_state_machine.hpp
        audio_core/debug_note_clip_state_machine.cpp
        audio_core/debug_node_connection_representation.hpp
        audio_core/debug_node_connection_representation.cpp
        audio_core/node_bounds.hpp
        audio_core/node_bounds.cpp
        audio_core/node_placement.hpp
        audio_core/node_placement.cpp
        audio_core/note_sets.hpp
        audio_core/note_sets.cpp
        audio_core/pitch_sampling.hpp
        audio_core/pitch_sampling.cpp
        audio_core/rhythm_parameters.hpp
        audio_core/rhythm_parameters.cpp
        audio_core/control_note_clip_state_machine.hpp
        audio_core/control_note_clip_state_machine.cpp
        audio_core/audio_port_placement.hpp
        audio_core/audio_port_placement.cpp
        audio_core/audio_node_attributes.hpp
        audio_core/audio_node_attributes.cpp
        audio_core/AudioComponent.hpp
        audio_core/AudioComponent.cpp
        audio_core/MonitorableParameterSystem.hpp
        audio_core/MonitorableParameterSystem.cpp
        audio_core/SimpleSetParameterSystem.hpp
        audio_core/SimpleSetParameterSystem.cpp
        audio_core/AudioGraphComponent.hpp
        audio_core/AudioGraphComponent.cpp
        audio_core/AudioBuffers.hpp
        audio_core/AudioBuffers.cpp
        audio_core/UIAudioParameterManager.hpp
        audio_core/UIAudioParameterManager.cpp
        audio_core/AudioComponentGUI.hpp
        audio_core/AudioComponentGUI.cpp
        audio_core/UIAudioRecordStream.hpp
        audio_core/UIAudioRecordStream.cpp
        audio_core/UIAudioScale.hpp
        audio_core/UIAudioScale.cpp
        audio_core/common.hpp
        audio_core/keyboard.hpp
        audio_core/keyboard.cpp
        audio_core/events.hpp
        audio_core/events.cpp
        audio_core/AudioConnectionManager.hpp
        audio_core/AudioConnectionManager.cpp
        audio_core/UIAudioConnectionManager.hpp
        audio_core/UIAudioConnectionManager.cpp
        audio_core/UIAudioBufferStore.hpp
        audio_core/UIAudioBufferStore.cpp
        audio_core/UIAudioGraphDestinationNodes.hpp
        audio_core/UIAudioGraphDestinationNodes.cpp
        audio_core/UITrackSystem.hpp
        audio_core/UITrackSystem.cpp
        audio_core/UIMIDIMessageStreamNodes.hpp
        audio_core/UIMIDIMessageStreamNodes.cpp
        audio_core/AudioNodeStorage.hpp
        audio_core/AudioNodeStorage.cpp
        audio_core/UITimelineSystem.hpp
        audio_core/UITimelineSystem.cpp
        audio_core/NodeSignalValueSystem.hpp
        audio_core/NodeSignalValueSystem.cpp

        audio_processors/Skittering1.hpp
        audio_processors/Skittering1.cpp
        audio_processors/GaussDistributedPitches1.hpp
        audio_processors/GaussDistributedPitches1.cpp
        audio_processors/MultiComponentSampler.hpp
        audio_processors/MultiComponentSampler.cpp
        audio_processors/ChimeSampler.cpp
        audio_processors/ChimeSampler.hpp
        audio_processors/SteerableSynth1.hpp
        audio_processors/SteerableSynth1.cpp
        audio_processors/SimpleFM1.hpp
        audio_processors/SimpleFM1.cpp
        audio_processors/signal.hpp
        audio_processors/ArpNode.hpp
        audio_processors/ArpNode.cpp
        audio_processors/OscSwell.hpp
        audio_processors/OscSwell.cpp
        audio_processors/TriggeredOsc.hpp
        audio_processors/TriggeredOsc.cpp
        audio_processors/TransientsSampler1.hpp
        audio_processors/TransientsSampler1.cpp
        audio_processors/PitchCVGen1.hpp
        audio_processors/PitchCVGen1.cpp
        audio_processors/Bender.hpp
        audio_processors/Bender.cpp
        audio_processors/Reverb1.hpp
        audio_processors/Reverb1.cpp
        audio_processors/ModulatedSampler.hpp
        audio_processors/ModulatedSampler.cpp
        audio_processors/EnvelopeSequencer.hpp
        audio_processors/EnvelopeSequencer.cpp
        audio_processors/ModulatedEnvelope.hpp
        audio_processors/ModulatedEnvelope.cpp
        audio_processors/ModulatedDelay1.hpp
        audio_processors/ModulatedDelay1.cpp
        audio_processors/Reverb1Node.hpp
        audio_processors/Reverb1Node.cpp
        audio_processors/BufferStoreSampler.hpp
        audio_processors/BufferStoreSampler.cpp
        audio_processors/RandomizedInstrumentNode.hpp
        audio_processors/RandomizedInstrumentNode.cpp
        audio_processors/WrapDestinationNode.hpp
        audio_processors/RandomizedSynth.hpp
        audio_processors/RandomizedSynth.cpp
        audio_processors/NoteSetNode.hpp
        audio_processors/NoteSetNode.cpp
        audio_processors/AltReverbNode.hpp
        audio_processors/AltReverbNode.cpp
        audio_processors/note_sets.hpp
        audio_processors/note_sets.cpp
        audio_processors/parameter.hpp
        audio_processors/Granulator.hpp
        audio_processors/RhythmicDelay1.hpp
        audio_processors/RhythmicDelay1.cpp
        audio_processors/ModulatedOscillator1.hpp
        audio_processors/ModulatedOscillator1.cpp
        audio_processors/pitch_cv.hpp
        audio_processors/SpectrumNode.hpp
        audio_processors/SpectrumNode.cpp
        audio_processors/TriggerNode.hpp
        audio_processors/TriggerNode.cpp
        audio_processors/TriggeredEnvelope.hpp
        audio_processors/TriggeredEnvelope.cpp
        audio_processors/MoogLPFilterNode.hpp
        audio_processors/MoogLPFilterNode.cpp
        audio_processors/gauss_distributed_pitches.hpp
        audio_processors/gauss_distributed_pitches_impl.hpp
        audio_processors/gauss_distributed_pitches_impl.cpp
        audio_processors/DebugTuning.hpp
        audio_processors/DebugTuning.cpp

        audio_observation/RandomizedInstrumentNodes.hpp
        audio_observation/RandomizedInstrumentNodes.cpp
        audio_observation/AudioObservation.hpp
        audio_observation/AudioObservation.cpp
        audio_observation/ModulatedDelay1.hpp
        audio_observation/ModulatedDelay1.cpp
        audio_observation/RandomizedSynths.hpp
        audio_observation/RandomizedSynths.cpp
        audio_observation/AudioParameterMonitor.hpp
        audio_observation/AudioParameterMonitor.cpp
        audio_observation/RhythmicDelay1.hpp
        audio_observation/RhythmicDelay1.cpp
        audio_observation/Bender.hpp
        audio_observation/Bender.cpp
        audio_observation/RandomizedEnvelope.hpp
        audio_observation/RandomizedEnvelope.cpp
        audio_observation/AltReverbNode.hpp
        audio_observation/AltReverbNode.cpp
        audio_observation/OscSwell.hpp
        audio_observation/OscSwell.cpp
        audio_observation/TriggeredOsc.hpp
        audio_observation/TriggeredOsc.cpp

        bounds/accel_insert.hpp
        bounds/accel_insert.cpp
        bounds/common.hpp
        bounds/common.cpp
        bounds/debug.hpp
        bounds/debug.cpp
        bounds/BoundsComponent.hpp
        bounds/BoundsComponent.cpp
        bounds/bounds_system.hpp
        bounds/bounds_system.cpp

        cabling/path_find.hpp
        cabling/path_find.cpp
        cabling/CablePathFinder.hpp
        cabling/CablePathFinder.cpp

        editor/entity.hpp
        editor/entity.cpp
        editor/cursor.hpp
        editor/cursor.cpp
        editor/editor.hpp
        editor/editor.cpp
        editor/render.hpp
        editor/render.cpp
        editor/transform_editor.hpp
        editor/transform_editor.cpp
        editor/properties.hpp
        editor/properties.cpp
        editor/property_inspector.hpp
        editor/property_inspector.cpp

        camera/CameraComponent.hpp
        camera/CameraComponent.cpp

        cloud/transient_mist.hpp
        cloud/transient_mist.cpp
        cloud/distribute_points.hpp
        cloud/worley.hpp
        cloud/worley.cpp
        cloud/FogComponent.hpp
        cloud/FogComponent.cpp

        generative/slime_mold.hpp
        generative/slime_mold.cpp

        grass/grass.hpp
        grass/grass.cpp
        grass/GrassComponent.hpp
        grass/GrassComponent.cpp
        grass/FrustumGrid.hpp
        grass/FrustumGrid.cpp
        grass/instancing.hpp
        grass/instancing.cpp

        glfw/glfw.hpp
        glfw/glfw.cpp

        imgui/imgui.hpp
        imgui/imgui.cpp
        imgui/ArchGUI.hpp
        imgui/ArchGUI.cpp
        imgui/AudioGUI.hpp
        imgui/AudioGUI.cpp
        imgui/EditorGUI.hpp
        imgui/EditorGUI.cpp
        imgui/FogGUI.hpp
        imgui/FogGUI.cpp
        imgui/InputGUI.hpp
        imgui/InputGUI.cpp
        imgui/ParticleGUI.hpp
        imgui/ParticleGUI.cpp
        imgui/ProceduralTreeGUI.hpp
        imgui/ProceduralTreeGUI.cpp
        imgui/ProceduralTreeRootsGUI.hpp
        imgui/ProceduralTreeRootsGUI.cpp
        imgui/ProceduralFlowerGUI.hpp
        imgui/ProceduralFlowerGUI.cpp
        imgui/ProfileComponentGUI.hpp
        imgui/ProfileComponentGUI.cpp
        imgui/TerrainGUI.hpp
        imgui/TerrainGUI.cpp
        imgui/GraphicsGUI.hpp
        imgui/GraphicsGUI.cpp
        imgui/IMGUIComponent.hpp
        imgui/IMGUIComponent.cpp
        imgui/SkyGUI.hpp
        imgui/SkyGUI.cpp
        imgui/SoilGUI.hpp
        imgui/SoilGUI.cpp
        imgui/SystemsGUI.hpp
        imgui/SystemsGUI.cpp
        imgui/WeatherGUI.hpp
        imgui/WeatherGUI.cpp
        imgui/SeasonGUI.hpp
        imgui/SeasonGUI.cpp

        model/ModelComponent.hpp
        model/ModelComponent.cpp
        model/mesh.hpp
        model/mesh.cpp

        particle/PollenComponent.hpp
        particle/PollenComponent.cpp
        particle/WindParticles.hpp
        particle/WindParticles.cpp
        particle/pollen_particle.hpp
        particle/pollen_particle.cpp

        procedural_tree/audio_nodes.hpp
        procedural_tree/audio_nodes.cpp
        procedural_tree/ProceduralTreeInstrument.hpp
        procedural_tree/ProceduralTreeInstrument.cpp
        procedural_tree/audio_signal.hpp
        procedural_tree/audio_signal.cpp
        procedural_tree/debug_node_rendering.hpp
        procedural_tree/debug_node_rendering.cpp
        procedural_tree/DebugProceduralTreeComponent.hpp
        procedural_tree/DebugProceduralTreeComponent.cpp
        procedural_tree/ProceduralTreeComponent.hpp
        procedural_tree/ProceduralTreeComponent.cpp
        procedural_tree/accel_insert.hpp
        procedural_tree/accel_insert.cpp
        procedural_tree/bounds.hpp
        procedural_tree/bounds.cpp
        procedural_tree/debug_growth_system.hpp
        procedural_tree/debug_growth_system.cpp
        procedural_tree/debug_health.hpp
        procedural_tree/debug_health.cpp
        procedural_tree/fit_bounds.hpp
        procedural_tree/fit_bounds.cpp
        procedural_tree/fit_growing_root_bounds.hpp
        procedural_tree/fit_growing_root_bounds.cpp
        procedural_tree/leaf_geometry.hpp
        procedural_tree/leaf_geometry.cpp
        procedural_tree/growth.hpp
        procedural_tree/growth.cpp
        procedural_tree/growth_system.hpp
        procedural_tree/growth_system.cpp
        procedural_tree/roots_instrument.hpp
        procedural_tree/roots_instrument.cpp
        procedural_tree/tree_message_system.hpp
        procedural_tree/tree_message_system.cpp
        procedural_tree/projected_nodes.hpp
        procedural_tree/projected_nodes.cpp
        procedural_tree/collide_with_object.hpp
        procedural_tree/collide_with_object.cpp
        procedural_tree/growth_on_mesh.hpp
        procedural_tree/growth_on_mesh.cpp
        procedural_tree/growth_on_nodes.hpp
        procedural_tree/growth_on_nodes.cpp
        procedural_tree/tree_system.hpp
        procedural_tree/tree_system.cpp
        procedural_tree/render_tree_system.hpp
        procedural_tree/render_tree_system.cpp
        procedural_tree/message_particles.hpp
        procedural_tree/message_particles.cpp
        procedural_tree/radius_limiter.hpp
        procedural_tree/radius_limiter.cpp
        procedural_tree/serialize_generic.hpp
        procedural_tree/serialize_generic.cpp
        procedural_tree/serialize.hpp
        procedural_tree/serialize.cpp
        procedural_tree/DebugTreeRootsComponent.hpp
        procedural_tree/DebugTreeRootsComponent.cpp
        procedural_tree/LSystemComponent.hpp
        procedural_tree/LSystemComponent.cpp
        procedural_tree/vine_system.hpp
        procedural_tree/vine_system.cpp
        procedural_tree/render_vine_system.hpp
        procedural_tree/render_vine_system.cpp
        procedural_tree/vine_ornamental_foliage.hpp
        procedural_tree/vine_ornamental_foliage.cpp
        procedural_tree/distribute_foliage_outwards_from_nodes.hpp
        procedural_tree/distribute_foliage_outwards_from_nodes.cpp
        procedural_tree/roots_components.hpp
        procedural_tree/roots_components.cpp
        procedural_tree/roots_growth.hpp
        procedural_tree/roots_growth.cpp
        procedural_tree/roots_render.hpp
        procedural_tree/roots_render.cpp
        procedural_tree/roots_utility.hpp
        procedural_tree/roots_utility.cpp
        procedural_tree/roots_system.hpp
        procedural_tree/roots_system.cpp
        procedural_tree/render_roots_system.hpp
        procedural_tree/render_roots_system.cpp
        procedural_tree/TreeRootsComponent.hpp
        procedural_tree/TreeRootsComponent.cpp
        procedural_tree/resource_flow_along_nodes.hpp
        procedural_tree/resource_flow_along_nodes.cpp
        procedural_tree/resource_flow_along_nodes_instrument.hpp
        procedural_tree/resource_flow_along_nodes_instrument.cpp
        procedural_tree/PointOctree.hpp
        procedural_tree/attraction_points.hpp
        procedural_tree/attraction_points.cpp
        procedural_tree/components.hpp
        procedural_tree/components.cpp
        procedural_tree/environment_input.hpp
        procedural_tree/environment_input.cpp
        procedural_tree/environment_sample.hpp
        procedural_tree/environment_sample.cpp
        procedural_tree/bud_fate.hpp
        procedural_tree/bud_fate.cpp
        procedural_tree/sync_growth.hpp
        procedural_tree/sync_growth.cpp
        procedural_tree/GrowthSystem.hpp
        procedural_tree/GrowthSystem.cpp
        procedural_tree/utility.hpp
        procedural_tree/utility.cpp
        procedural_tree/render.hpp
        procedural_tree/render.cpp
        procedural_tree/node_mesh.hpp
        procedural_tree/node_mesh.cpp

        procedural_flower/ProceduralFlowerComponent.hpp
        procedural_flower/ProceduralFlowerComponent.cpp
        procedural_flower/ornament_texture.hpp
        procedural_flower/ornament_texture.cpp
        procedural_flower/ProceduralFlowerOrnamentParticles.hpp
        procedural_flower/ProceduralFlowerOrnamentParticles.cpp
        procedural_flower/petal.hpp
        procedural_flower/petal.cpp
        procedural_flower/ProceduralFlowerBenderInstrument.hpp
        procedural_flower/ProceduralFlowerBenderInstrument.cpp
        procedural_flower/geometry.hpp
        procedural_flower/geometry.cpp

        sky/SkyComponent.hpp
        sky/SkyComponent.cpp
        sky/SkyGradient.hpp
        sky/SkyGradient.cpp
        sky/SkyProperties.hpp
        sky/SkyProperties.cpp
        sky/weather.hpp
        sky/weather.cpp
        sky/sun.hpp
        sky/sun.cpp

        render/ArchRenderer.hpp
        render/ArchRenderer.cpp
        render/CloudRenderer.hpp
        render/CloudRenderer.cpp
        render/DebugImageRenderer.hpp
        render/DebugImageRenderer.cpp
        render/RenderComponent.hpp
        render/RenderComponent.cpp
        render/ShadowComponent.hpp
        render/ShadowComponent.cpp
        render/StaticModelRenderer.hpp
        render/StaticModelRenderer.cpp
        render/foliage_occlusion_types.hpp
        render/foliage_occlusion.hpp
        render/foliage_occlusion.cpp
        render/csm.hpp
        render/csm.cpp
        render/font.hpp
        render/font.cpp
        render/occlusion_cull_gpu.hpp
        render/occlusion_cull_gpu.cpp
        render/frustum_cull_types.hpp
        render/frustum_cull_data.hpp
        render/frustum_cull_data.cpp
        render/frustum_cull_gpu.hpp
        render/frustum_cull_gpu.cpp
        render/debug_frustum_cull.hpp
        render/debug_frustum_cull.cpp
        render/render_particles_gpu.hpp
        render/render_particles_gpu.cpp
        render/render_resource_flow_along_nodes_particles.hpp
        render/render_resource_flow_along_nodes_particles.cpp
        render/foliage_drawable_components.hpp
        render/foliage_drawable_components.cpp
        render/render_tree_leaves_types.hpp
        render/render_tree_leaves.hpp
        render/render_tree_leaves.cpp
        render/render_tree_leaves_gpu.hpp
        render/render_tree_leaves_gpu.cpp
        render/render_branch_nodes.hpp
        render/render_branch_nodes.cpp
        render/render_branch_nodes_types.hpp
        render/render_branch_nodes_gpu.hpp
        render/render_branch_nodes_gpu.cpp
        render/render_ornamental_foliage_descriptors.hpp
        render/render_ornamental_foliage_types.hpp
        render/render_ornamental_foliage_data.hpp
        render/render_ornamental_foliage_data.cpp
        render/render_ornamental_foliage_gpu.hpp
        render/render_ornamental_foliage_gpu.cpp
        render/branch_node_drawable_components.hpp
        render/branch_node_drawable_components.cpp
        render/roots_drawable_components.hpp
        render/roots_drawable_components.cpp
        render/render_vines.hpp
        render/render_vines.cpp
        render/gen_depth_pyramid_gpu.hpp
        render/gen_depth_pyramid_gpu.cpp
        render/GrassRenderer.hpp
        render/GrassRenderer.cpp
        render/TerrainRenderer.hpp
        render/TerrainRenderer.cpp
        render/SkyRenderer.hpp
        render/SkyRenderer.cpp
        render/ProceduralFlowerStemRenderer.hpp
        render/ProceduralFlowerStemRenderer.cpp
        render/ProceduralTreeRootsRenderer.hpp
        render/ProceduralTreeRootsRenderer.cpp
        render/SimpleShapeRenderer.hpp
        render/SimpleShapeRenderer.cpp
        render/SimpleShapePools.hpp
        render/SimpleShapePools.cpp
        render/WindParticleRenderer.hpp
        render/WindParticleRenderer.cpp
        render/PollenParticleRenderer.hpp
        render/PollenParticleRenderer.cpp
        render/PointBufferRenderer.hpp
        render/PointBufferRenderer.cpp
        render/PostProcessBlitter.hpp
        render/PostProcessBlitter.cpp
        render/RainParticleRenderer.hpp
        render/RainParticleRenderer.cpp
        render/SampledImageManager.hpp
        render/SampledImageManager.cpp
        render/DynamicSampledImageManager.hpp
        render/DynamicSampledImageManager.cpp
        render/NoiseImages.hpp
        render/NoiseImages.cpp
        render/memory.hpp
        render/memory.cpp
        render/debug_draw.hpp
        render/debug_draw.cpp
        render/debug_label.hpp
        render/debug_label.cpp
        render/forward_write_back_pass.hpp
        render/forward_write_back_pass.cpp
        render/post_forward_pass.hpp
        render/post_forward_pass.cpp
        render/post_process_pass.hpp
        render/post_process_pass.cpp
        render/present_pass.hpp
        render/present_pass.cpp
        render/pass_common.hpp
        render/pass_common.cpp
        render/shadow.hpp
        render/shadow.cpp
        render/shadow_pass.hpp
        render/shadow_pass.cpp
        render/graphics.hpp
        render/graphics.cpp
        render/graphics_context.hpp
        render/graphics_context.cpp
        render/graphics_preset.hpp
        render/graphics_preset.cpp
        render/utility.hpp
        render/utility.cpp
        render/render_gui_types.hpp
        render/render_gui_data.hpp
        render/render_gui_data.cpp
        render/render_gui_gpu.hpp
        render/render_gui_gpu.cpp

        terrain/TerrainComponent.hpp
        terrain/TerrainComponent.cpp
        terrain/DebugTerrainComponent.hpp
        terrain/DebugTerrainComponent.cpp
        terrain/Soil.hpp
        terrain/Soil.cpp
        terrain/SoilComponent.hpp
        terrain/SoilComponent.cpp
        terrain/soil_parameter_modulator.hpp
        terrain/soil_parameter_modulator.cpp
        terrain/cube_march.hpp
        terrain/cube_march.cpp
        terrain/place_on_mesh.hpp
        terrain/place_on_mesh.cpp
        terrain/weather.hpp
        terrain/weather.cpp
        terrain/terrain.hpp
        terrain/terrain.cpp
        terrain/heightmap_io.hpp
        terrain/heightmap_io.cpp

        transform/transform_allocator.hpp
        transform/transform_allocator.cpp
        transform/transform_system.hpp
        transform/transform_system.cpp
        transform/trs.hpp

        shaderc/compile.hpp
        shaderc/compile.cpp
        shaderc/reflect.hpp
        shaderc/reflect.cpp
        shaderc/reflect_resource.hpp
        shaderc/reflect_resource.cpp
        shaderc/vk/reflect_resource.hpp
        shaderc/vk/reflect_resource.cpp

        wind/WindComponent.hpp
        wind/WindComponent.cpp
        wind/SpatiallyVaryingWind.hpp
        wind/SpatiallyVaryingWind.cpp
        wind/WindDisplacement.hpp
        wind/WindDisplacement.cpp
        wind/WindWavePlane.hpp
        wind/WindWavePlane.cpp
        wind/WindSpectralInfluence.hpp
        wind/WindSpectralInfluence.cpp

        ui/UIPlaneComponent.hpp
        ui/UIPlaneComponent.cpp
        ui/UIPlaneCloth.hpp
        ui/UIPlaneCloth.cpp
        ui/audio_node_editor.hpp
        ui/audio_node_editor.cpp
        ui/UITexture2.hpp
        ui/UITexture2.cpp
        ui/UIPlane.hpp
        ui/UIPlane.cpp
        ui/audio_timeline_editor.hpp
        ui/audio_timeline_editor.cpp
        ui/audio_track_editor.hpp
        ui/audio_track_editor.cpp
        ui/audio_editors_common.hpp
        ui/arch_gui.hpp
        ui/arch_gui.cpp
        ui/flower_gui.hpp
        ui/flower_gui.cpp
        ui/ui_common.hpp
        ui/ui_common.cpp
        ui/ui_util.hpp
        ui/ui_util.cpp
        ui/audio_editors.hpp
        ui/audio_editors.cpp
        ui/UIComponent.hpp
        ui/UIComponent.cpp
        ui/world_gui.hpp
        ui/world_gui.cpp
        ui/world_gui_common.hpp
        ui/menu_gui_common.hpp
        ui/menu_gui.hpp
        ui/menu_gui.cpp
        ui/help_gui.hpp
        ui/help_gui.cpp
        ui/tree_gui.hpp
        ui/tree_gui.cpp
        ui/roots_gui.hpp
        ui/roots_gui.cpp
        ui/screen0_gui.hpp
        ui/screen0_gui.cpp
        ui/tutorial_gui.hpp
        ui/tutorial_gui.cpp
        ui/graphics_settings_gui.hpp
        ui/graphics_settings_gui.cpp
        ui/audio_settings_gui.hpp
        ui/audio_settings_gui.cpp
        ui/gui_components.hpp
        ui/gui_components.cpp
        ui/gui_draw.hpp
        ui/gui_draw.cpp

        vk/buffer.hpp
        vk/buffer.cpp
        vk/buffer_image_copy.hpp
        vk/buffer_image_copy.cpp
        vk/buffer_system.hpp
        vk/buffer_system.cpp
        vk/common.hpp
        vk/common.cpp
        vk/command.hpp
        vk/command.cpp
        vk/command_processor.hpp
        vk/command_processor.cpp
        vk/descriptor_set.hpp
        vk/descriptor_set.cpp
        vk/descriptor_system.hpp
        vk/descriptor_system.cpp
        vk/simple_descriptor_system.hpp
        vk/simple_descriptor_system.cpp
        vk/draw.hpp
        vk/image.hpp
        vk/image.cpp
        vk/io.hpp
        vk/io.cpp
        vk/sampler.hpp
        vk/sampler.cpp
        vk/sampler_system.hpp
        vk/sampler_system.cpp
        vk/staging_buffer_system.hpp
        vk/staging_buffer_system.cpp
        vk/submit.hpp
        vk/submit.cpp
        vk/pipeline.hpp
        vk/pipeline.cpp
        vk/pipeline_barrier.hpp
        vk/pipeline_barrier.cpp
        vk/pipeline_layout.hpp
        vk/pipeline_layout.cpp
        vk/pipeline_system.hpp
        vk/pipeline_system.cpp
        vk/profiler.hpp
        vk/profiler.cpp
        vk/program.hpp
        vk/program.cpp
        vk/upload.hpp
        vk/upload.cpp
        vk/vk.hpp

        weather/common.hpp
        weather/common.cpp
        weather/WeatherSystem.hpp
        weather/WeatherSystem.cpp

        environment/WeatherComponent.hpp
        environment/WeatherComponent.cpp
        environment/RainParticles.hpp
        environment/RainParticles.cpp
        environment/season.hpp
        environment/SeasonComponent.hpp
        environment/SeasonComponent.cpp
        environment/environment_instruments.hpp
        environment/environment_instruments.cpp
        environment/environment_global_sound_control.hpp
        environment/environment_global_sound_control.cpp
        environment/EnvironmentComponent.hpp
        environment/EnvironmentComponent.cpp
        environment/AmbientEnvironmentSound.hpp
        environment/AmbientEnvironmentSound.cpp

        util/ProfileComponent.hpp
        util/ProfileComponent.cpp
        util/profiling.hpp
        util/profiling.cpp
        util/command_line.hpp
        util/command_line.cpp
        util/texture_io.hpp
        util/texture_io.cpp
)

add_executable(${PROJECT_NAME} ${SOURCES})

target_sources(${PROJECT_NAME} PRIVATE
  ${GROVE_IMGUI_ROOT_DIR}/imgui/backends/imgui_impl_glfw.cpp
  ${GROVE_IMGUI_ROOT_DIR}/imgui/backends/imgui_impl_vulkan.cpp
)

target_include_directories(${PROJECT_NAME} PRIVATE
  ../../deps/implot
)

target_sources(${PROJECT_NAME} PRIVATE
  ../../deps/implot/implot.cpp
  ../../deps/implot/implot_items.cpp
  ../../deps/implot/implot.h
  ../../deps/implot/implot_internal.h
)

target_link_libraries(${PROJECT_NAME} grove)
target_compile_definitions(${PROJECT_NAME} PUBLIC
    GROVE_DEFAULT_SHADER_DIR="${PROJECT_SOURCE_DIR}/shaders"
#    GROVE_PLAYGROUND_RES_DIR="${PROJECT_SOURCE_DIR}/../../playground/res"
#    GROVE_PLAYGROUND_RES_DIR="grove::env::get_asset_directory()"
    GROVE_PROJECT_SOURCE_DIR="${PROJECT_SOURCE_DIR}"
)

function(configure_compiler_flags project)
    if(MSVC)
        target_compile_options(${project} PRIVATE /W4)
    elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
        target_compile_options(${project} PRIVATE -Wall -Wextra -pedantic)
    else()
        target_compile_options(${project} PRIVATE -Wall -Wextra -pedantic -Werror)
    endif()
endfunction(configure_compiler_flags)

configure_compiler_flags(${PROJECT_NAME})

add_subdirectory(cloud/test)
add_subdirectory(procedural_tree/test)
add_subdirectory(procedural_flower/test)